tests/baselines/reference/privateConstructorFunction.errors.txt
privateConstructorFunction.js(6,14): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.


==== privateConstructorFunction.js (1 errors) ====
    {
        // make sure not to crash when parent's a block rather than a source file or some other
        // symbol-having node.
    
        /** @private */
        function C() {
                 ~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
            this.x = 1
        }
        new C()
    }
    